--- a/app/todo.txt
+++ b/app/todo.txt
@@ -14,12 +14,15 @@
         - [x] needs to handle a list in state
         - [x] reducer case for add moose action
 
-    - [ ] let user select estimated age of each moose
-        - [ ] age selector UI element
-        - [ ] dispatch update moose payload { id, age, other stuff}
-        - [ ] update moose reducer case, where we only update the moose whos id we had in the payload
-    - [ ] prompt for loctation
-        - [ ] let user enter or grab from geolocation
+    - [x] let user select estimated age of each moose
+        - [x] age selector UI element
+        - [x] dispatch update moose payload { id, age, other stuff}
+        - [x] update moose reducer case, where we only update the moose whos id we had in the payload
+
+    - [x] prompt for loctation
+        - [ ] let user enter or 
+        - [x] grab from geolocation
+
     - [ ] confirm/submit - dispatch action
         - [ ] modal / ui prompt and dispatch on confirm
 
