--- a/app/todo.txt
+++ b/app/todo.txt
@@ -4,7 +4,7 @@
   - [x] replace age with enum of 'adult' 'calf' - g
   - [x] add a moose tracker / bcgov header + footer - j
   - [x] find or edit the icon so we have a female + calf icon - j
-    - [ ] add attribution for the existing icons
+    - [x] add attribution for the existing icons
     - [x] edit or find the other two - l
   - [x] add multiple icons when there are multiple moose - j
   - [ ] pages in app with react router: - m + g
