update todo feb22

--- a/app/todo.txt
+++ b/app/todo.txt
@@ -1,3 +1,24 @@
+Feb.22/24
+
+- [ ] Zoom control css should be fixed
+- [ ] About page needs fixing
+  - [ ] Fish from BCGov's moose tracker repos, there should be two of them
+- [ ] Add "make a sighting" button or something like that for new sightings page
+- [ ] Add an indicator to show which route we're on
+- [ ] Add a tutorial icon/help box
+- [ ] add a button for regulations pdf page
+- [ ] Include pdf as an asset so it doesn't have to do a webfetch for it
+  - [ ] Find the hunting regulations for this year and proof out viewing that pdf in android and ios for version 1
+  - [ ] For version 2 include a table of contents and physically split the pdf by regulations
+- [ ] Fix the react problems within console
+- [ ] Sightings page could use some more styling
+- [ ] get docker working
+- [ ] Moose pins should be different colors
+  - [ ] synced
+  - [ ] not synced
+  - [ ] Current sighting
+- [ ] All sightings page should look like the make a sighting page
+
 
 today;
 
